--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "ember": "~2.10.0",
     "ember-cli-shims": "0.1.3",
-    "material-design-lite": "^1.2.1"
+    "material-design-lite": "^1.2.1",
+    "marked": "^0.3.6",
+    "highlightjs": "^9.8.0"
   }
 }
