--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ember-cli-shims": "0.1.3",
     "material-design-lite": "^1.2.1",
     "marked": "^0.3.6",
-    "highlightjs": "^9.8.0"
+    "highlightjs": "^9.8.0",
+    "dialog-polyfill": "^0.4.5"
   }
 }
