--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
+    "ember-sinon": "^0.6.0",
     "ember-source": "~2.12.0",
     "ember-welcome-page": "^2.0.2",
     "eslint-config-standard": "^6.2.1",
